# travel-itinerary-planner

meta/: Dockerfile  GITHUB_DEPLOY_GUIDE.txt  GITHUB_UPLOAD_INSTRUCTIONS.txt  README.md  VERIFICATION_REPORT.md  app.py  demo_env.py  demo_fixed.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  temp_env_check.py  upload_to_github.bat  upload_to_github.sh  validate_submission.py
meta/tests/: test_env.py
meta/travel_itinerary_planner/: __init__.py  env.py
